Search dialog interface cleanup, fixed search and replace history